Removed all roomfidner things from the docs as they are replaced by navigatum
