# server/api/gen/openapiv2/CampusService.swagger.json
@@ -770,41 +770,6 @@
         ]
       }
     },
-    "/locations/{location}": {
-      "get": {
-        "summary": "a location is a campus location/building, e.g. \"Garching Forschungszentrum\"",
-        "operationId": "Campus_GetLocations",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "$ref": "#/definitions/apiGetLocationsReplyLocation"
-              }
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "location",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "Campus"
-        ]
-      }
-    },
     "/members/{lrzId}": {
       "get": {
         "operationId": "Campus_GetMembers",
@@ -975,146 +940,6 @@
         ]
       }
     },
-    "/roomfinder/maps": {
-      "post": {
-        "operationId": "Campus_GetRoomMaps",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "$ref": "#/definitions/GetRoomMapsReplyMap"
-              }
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/apiGetRoomMapsRequest"
-            }
-          }
-        ],
-        "tags": [
-          "Campus"
-        ]
-      }
-    },
-    "/roomfinder/room/coordinates": {
-      "post": {
-        "operationId": "Campus_GetRoomCoordinates",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiGetRoomCoordinatesReply"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/apiGetRoomCoordinatesRequest"
-            }
-          }
-        ],
-        "tags": [
-          "Campus"
-        ]
-      }
-    },
-    "/roomfinder/room/scheduleById": {
-      "post": {
-        "operationId": "Campus_GetRoomSchedule",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "$ref": "#/definitions/GetRoomScheduleReplyRoomScheduleEvent"
-              }
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/apiGetRoomScheduleRequest"
-            }
-          }
-        ],
-        "tags": [
-          "Campus"
-        ]
-      }
-    },
-    "/roomfinder/room/search": {
-      "post": {
-        "operationId": "Campus_SearchRooms",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "$ref": "#/definitions/apiRoom"
-              }
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/apiSearchRoomsRequest"
-            }
-          }
-        ],
-        "tags": [
-          "Campus"
-        ]
-      }
-    },
     "/studyrooms": {
       "get": {
         "operationId": "Campus_GetStudyRoomList",
@@ -1170,53 +995,6 @@
     }
   },
   "definitions": {
-    "GetRoomMapsReplyMap": {
-      "type": "object",
-      "properties": {
-        "mapId": {
-          "type": "string",
-          "format": "int64"
-        },
-        "description": {
-          "type": "string"
-        },
-        "scale": {
-          "type": "string",
-          "format": "int64"
-        },
-        "width": {
-          "type": "string",
-          "format": "int64"
-        },
-        "height": {
-          "type": "string",
-          "format": "int64"
-        }
-      }
-    },
-    "GetRoomScheduleReplyRoomScheduleEvent": {
-      "type": "object",
-      "properties": {
-        "start": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "end": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "title": {
-          "type": "string"
-        },
-        "eventId": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "courseCode": {
-          "type": "string"
-        }
-      }
-    },
     "apiBuilding2GpsElement": {
       "type": "object",
       "properties": {
@@ -1496,38 +1274,6 @@
         }
       }
     },
-    "apiGetLocationsReply": {
-      "type": "object",
-      "properties": {
-        "locations": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/apiGetLocationsReplyLocation"
-          }
-        }
-      }
-    },
-    "apiGetLocationsReplyLocation": {
-      "type": "object",
-      "properties": {
-        "location": {
-          "type": "string"
-        },
-        "name": {
-          "type": "string"
-        },
-        "lon": {
-          "type": "string"
-        },
-        "lat": {
-          "type": "string"
-        },
-        "radius": {
-          "type": "string"
-        }
-      }
-    },
     "apiGetMembersReply": {
       "type": "object",
       "properties": {
@@ -1606,79 +1352,6 @@
             "type": "object",
             "$ref": "#/definitions/apiResponsiblePersonElement"
           }
-        }
-      }
-    },
-    "apiGetRoomCoordinatesReply": {
-      "type": "object",
-      "properties": {
-        "utmZone": {
-          "type": "string"
-        },
-        "utmEasting": {
-          "type": "number",
-          "format": "float"
-        },
-        "utmNorthing": {
-          "type": "number",
-          "format": "float"
-        }
-      }
-    },
-    "apiGetRoomCoordinatesRequest": {
-      "type": "object",
-      "properties": {
-        "archId": {
-          "type": "string"
-        }
-      }
-    },
-    "apiGetRoomMapsReply": {
-      "type": "object",
-      "properties": {
-        "maps": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/GetRoomMapsReplyMap"
-          }
-        }
-      }
-    },
-    "apiGetRoomMapsRequest": {
-      "type": "object",
-      "properties": {
-        "archId": {
-          "type": "string"
-        }
-      }
-    },
-    "apiGetRoomScheduleReply": {
-      "type": "object",
-      "properties": {
-        "events": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/GetRoomScheduleReplyRoomScheduleEvent"
-          }
-        }
-      }
-    },
-    "apiGetRoomScheduleRequest": {
-      "type": "object",
-      "properties": {
-        "room": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "start": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "end": {
-          "type": "string",
-          "format": "date-time"
         }
       }
     },
@@ -2078,39 +1751,6 @@
         }
       }
     },
-    "apiRoom": {
-      "type": "object",
-      "properties": {
-        "roomId": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "roomCode": {
-          "type": "string"
-        },
-        "buildingNr": {
-          "type": "string"
-        },
-        "archId": {
-          "type": "string"
-        },
-        "info": {
-          "type": "string"
-        },
-        "address": {
-          "type": "string"
-        },
-        "purpose": {
-          "type": "string"
-        },
-        "campus": {
-          "type": "string"
-        },
-        "name": {
-          "type": "string"
-        }
-      }
-    },
     "apiRoomInformationElement": {
       "type": "object",
       "properties": {
@@ -2140,26 +1780,6 @@
           "type": "string"
         },
         "name": {
-          "type": "string"
-        }
-      }
-    },
-    "apiSearchRoomsReply": {
-      "type": "object",
-      "properties": {
-        "rooms": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/apiRoom"
-          }
-        }
-      }
-    },
-    "apiSearchRoomsRequest": {
-      "type": "object",
-      "properties": {
-        "query": {
           "type": "string"
         }
       }
